2009-09-11  Don Porter  <dgp@users.sourceforge.net>

	* library/http/http.tcl:	Bump to http 2.7.4 to account for
	* library/http/pkgIndex.tcl:	[Bug 2849860] fix.
	* unix/Makefile.in:
	* win/Makefile.in:

2009-09-10  Donal K. Fellows  <dkf@users.sf.net>

	* library/http/http.tcl (http::Event): [Bug 2849860]: Handle charset
	names in double quotes; some servers like generating them like that.

2009-09-01  Don Porter  <dgp@users.sourceforge.net>

	* library/tcltest/tcltest.tcl:	Bump to tcltest 2.3.2 after revision
	* library/tcltest/pkgIndex.tcl:	to verbose error message.
	* unix/Makefile.in:
	* win/Makefile.in:

2009-08-27  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c:	[Bug 2845535]: A few more string
	overflow cases in [format].

2009-08-25  Andreas Kupries  <andreask@activestate.com>

	* generic/tclBasic.c (Tcl_CreateInterp, Tcl_EvalTokensStandard)
	(EvalTokensStandard, Tcl_EvalEx, EvalEx, TclAdvanceContinuations)
	(TclEvalObjEx):
	* generic/tclCmdMZ.c (Tcl_SwitchObjCmd, TclListLines):
	* generic/tclCompCmds.c (*):
	* generic/tclCompile.c (TclSetByteCodeFromAny, TclInitCompileEnv)
	(TclFreeCompileEnv, TclCompileScript):
	* generic/tclCompile.h (CompileEnv):
	* generic/tclInt.h (ContLineLoc, Interp):
	* generic/tclObj.c (ThreadSpecificData, ContLineLocFree)
	(TclThreadFinalizeObjects, TclInitObjSubsystem, TclContinuationsEnter)
	(TclContinuationsEnterDerived, TclContinuationsCopy)
	(TclContinuationsGet, TclFreeObj):
	* generic/tclParse.c (TclSubstTokens, Tcl_SubstObj):
	* generic/tclProc.c (TclCreateProc):
	* generic/tclVar.c (TclPtrSetVar):
	* tests/info.test (info-30.0-24):

	Extended parser, compiler, and execution with code and attendant data
	structures tracking the positions of continuation lines which are not
	visible in script Tcl_Obj*'s, to properly account for them while
	counting lines for #280.

2009-08-24  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tclMacOSXNotify.c: Fix multiple issues with nested event loops